update GC note